# examinis-api

./: .gitignore  README.md  compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/merge_request_templates/: feature.md
examinis/: app.py
examinis/common/schemas/: pagination_schema.py
examinis/common/validators/: image_upload_validator.py
examinis/core/: RepositoryAbstract.py  ServiceAbstract.py
examinis/db/: config.py  dev_init_seed.sql
examinis/models/: __init__.py  correct_option.py  difficulty.py  exam.py  option.py  question.py  role.py  subject.py  user.py  user_status.py
examinis/modules/: __init__.py
examinis/modules/difficulty/: repository.py  schemas.py  service.py  views.py
examinis/modules/exam/: repository.py  schemas.py  service.py  validators.py  views.py
examinis/modules/option/: repository.py  schemas.py  service.py  validators.py
examinis/modules/question/: repository.py  schemas.py  service.py  views.py
examinis/modules/role/: repository.py  schemas.py  service.py  views.py
examinis/modules/subject/: repository.py  schemas.py  service.py  views.py
examinis/modules/user/: schemas.py
migration/: env.py
migrations/: env.py
migrations/versions/: 1dd8ff12e8da_add_question_image.py  31401c00c412_exam.py  413df41863d1_add_questions_related_tables.py  648bb3eea262_add_questions_related_tables.py  7889beed0189_add_exam.py  928f465bfd57_initial_migration.py  f9a312457602_initial_migration.py
tests/: conftest.py  factories.py  test_app.py  test_question.py  test_subject.py
