[tool.poetry]
name = "examinis"
version = "0.1.0"
description = ""
authors = ["paulosys <paulosilvasergio486@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.7"
ruff = "^0.8.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev examinis/app.py'
test = 'pytest -s -x --cov=examinis'
post_test = 'coverage.html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'