[tool.poetry]
name = "examinis"
version = "0.1.0"
description = ""
authors = ["paulosys <paulosilvasergio486@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.7"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
testcontainers = "^4.9.0"
blue = "^0.9.1"
isort = "^5.13.2"
httpx = "^0.28.1"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev examinis/app.py'
test = 'pytest -s -x --cov=examinis'
post_test = 'coverage.html'
format = 'blue examinis & isort examinis & blue tests & isort tests'
db-upgrade = 'alembic upgrade head'
db-downgrade-base = 'alembic downgrade base'
db-downgrade = 'alembic downgrade -1'
db-migrate = 'alembic revision --autogenerate -m'